Sets up travis to use conda build Adds default ccds converter as dependency Updates setup.py to use renamed readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,18 @@ language: python
 python:
   - "3.3"
   - "2.7"
-# Command to install dependencies
-install: python setup.py install
+notifications:
+  email: false
+install:
+	# Install conda
+	- sudo pip install conda
+	# Install dependencies
+	- sudo conda init
+	- sudo conda update conda --yes
+	- DEPS='pip numpy sqlalchemy cython pytest'
+	- conda create -p $HOME/py --yes $DEPS "python=$TRAVIS_PYTHON_VERSION"
+	- export PATH=$HOME/py/bin:$PATH
+	# install your own package
+	- python setup.py install
+	- conda info -a
 script: py.test
