--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,9 @@
 # Mac OS X hidden files
 .DS_Store
- 
-*.py[cod]
- 
-# C extensions
-*.so
- 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
- 
-# Installer logs
-pip-log.txt
- 
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
- 
-# Translations
-*.mo
- 
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
 
+# Temporary files
 *.py[cod]
+__pycache__
 
 # C extensions
 *.so
@@ -75,10 +41,14 @@ nosetests.xml
 .env
 *.tar.gz
 TRASH*
-*.sublime-*
 
-# Databses
-*.db*
-
-# Docs
+# Sphinx docs
 docs/_build
+
+### SublimeText ###
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
