--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,15 @@
-include LICENSE README.md requirements.txt
+include AUTHORS.md
+include CONTRIBUTING.md
+include HISTORY.md
+include LICENSE
+include README.md
+
+include chanjo/VERSION
+include requirements.txt
+recursive-include requirements *
+
+recursive-include tests *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+
+recursive-include docs *.rst conf.py Makefile make.bat
