install zsh and presto into Vagrant env

--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -18,6 +18,15 @@
     - wget
     - vim
     - tmux
+    - zsh
+
+- name: install prezto
+  git: repo=https://github.com/sorin-ionescu/prezto.git
+       dest=/home/vagrant/.zprezto
+       recursive=yes
+
+- name: change user shell
+  user: name=vagrant shell=/usr/bin/zsh
 
 - name: install basic pip packages
   pip: name={{ item }}
