Add demo files as package for dist.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
-include AUTHORS.md
+include AUTHORS
 include CONTRIBUTING.md
-include HISTORY.md
+include CHANGELOG.md
 include LICENSE
 include README.md
 
@@ -8,7 +8,6 @@ include requirements.txt
 recursive-include requirements *
 
 recursive-include tests *
-recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
 recursive-include docs *.rst conf.py Makefile make.bat
