--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,5 +2,15 @@
 current_version = 1.1.1
 commit = True
 tag = True
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<release>[a-z]+)?
+serialize =
+	{major}.{minor}.{patch}-{release}
+	{major}.{minor}.{patch}
+
+
+[bumpversion:part:release]
+values =
+	alpha
+	beta
 
 [bumpversion:file:chanjo/__init__.py]
