Configure bump version with alpha/beta releases

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,10 +7,10 @@ serialize =
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
-
 [bumpversion:part:release]
+optional_value = gamma
 values =
-	alpha
 	beta
+	gamma
 
 [bumpversion:file:chanjo/__init__.py]
