--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,16 +1,17 @@
 [bumpversion]
-current_version = 1.1.1
+current_version = 2.0.0-beta
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<release>[a-z]+)?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = gamma
-values =
+values = 
 	beta
 	gamma
 
 [bumpversion:file:chanjo/__init__.py]
+
