--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Mac OS X hidden files
 .DS_Store
 
-# Temporary files
+# Byte-compiled / optimized / DLL files
 *.py[cod]
-__pycache__
+__pycache__/
 
 # C extensions
 *.so
