--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.3.2
+current_version = 3.0.0-beta
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<release>[a-z]+)?
@@ -14,4 +14,3 @@ values =
 [bumpversion:file:chanjo/__init__.py]
 
 [bumpversion:file:setup.py]
-
