--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ pip-log.txt
 .tox
 nosetests.xml
 htmlcov
-.cache
+.cache/
 
 # Translations
 *.mo
@@ -45,7 +45,7 @@ htmlcov
 *.tar.gz
 TRASH*
 .vagrant
-dev
+_DEVELOP
 
 # Sphinx docs
 docs/_build
