--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,32 @@
-# config file for automatic testing at travis-ci.org
 language: python
 sudo: false
-
-notifications:
-  email: never
-
 python:
-  - "2.7"
-  - "3.5"
+    - '2.7'
+    - '3.5'
 
 install:
-  # install sambamba binary
-  - mkdir -p ./bin
-  - wget https://github.com/lomereiter/sambamba/releases/download/v0.5.8/sambamba_v0.5.8_linux.tar.bz2
-  - tar xvjf sambamba_v0.5.8_linux.tar.bz2
-  - mv sambamba_v0.5.8 ./bin/sambamba
-  - chmod +x ./bin/sambamba
-  - export PATH="${PATH}:${PWD}/bin"
-
-  # install package and dependencies
-  - pip install -q -r requirements-dev.txt .
+    - mkdir -p ./bin
+    - wget https://github.com/lomereiter/sambamba/releases/download/v0.5.8/sambamba_v0.5.8_linux.tar.bz2
+    - tar xvjf sambamba_v0.5.8_linux.tar.bz2
+    - mv sambamba_v0.5.8 ./bin/sambamba
+    - chmod +x ./bin/sambamba
+    - export PATH="${PATH}:${PWD}/bin"
+    - pip install -q -r requirements-dev.txt .
 
 script:
-  # command to run tests and collect test coverage
-  - coverage run --source chanjo setup.py test
+    - coverage run --source chanjo setup.py test
 
-after_success:
-  coveralls
+after_success: coveralls
+
+notifications:
+    email: never
+
+deploy:
+    provider: pypi
+    user: robinandeer
+    password:
+        secure: fQsE+5FUuXWuLMuGVirfSEz7WBc09gxDbEcPfIJFUQ2FzaGCQ+OGZpb6sbNCrazhqwnyyJ7b4ZD3bjJ++kWsmnpgvdUFZRDUUpcLuDtwzPSxHVx/1Zax4gMnny83Z1yF4O7m8bXt7HG1mPuKzPSHLOcTg3SxTQEgSi27dkeY4WE=
+    on:
+        tags: true
+        distributions: sdist bdist_wheel
+        repo: robinandeer/chanjo
