add sample limiter to mean update tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,8 @@ universal=1
 # make pypi render markdown files
 [metadata]
 description-file = README.md
+
+[pytest]
+looponfailroots =
+    tests/
+    chanjo/
