update Path.py imports fix general issues

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,10 @@
--r ./requirements.txt
-
 bumpversion
-coverage
 coveralls
 flake8
 invoke
 ipdb
 pytest
+pytest-cov
+pytest-xdist
 wheel>=0.23
 mock
