--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ docs/_book
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
 # *.sublime-project
+
+# Demo
+chanjo-demo/
