Changed where we deploy
Changed from running in robinadeer repo to Clinical-Genomics

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ deploy:
     on:
         tags: true
         distributions: sdist bdist_wheel
-        repo: robinandeer/chanjo
+        repo: Clinical-Genomics/chanjo
