--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ sudo: false
 python:
     - '3.6'
 
-before_install:
-    - pip install git-lint pylint pycodestyle yamllint docutils html-linter
-    - git reset --soft ${TRAVIS_COMMIT_RANGE%...*} && git lint
-
 install:
     - mkdir -p ./bin
     - wget https://github.com/lomereiter/sambamba/releases/download/v0.5.8/sambamba_v0.5.8_linux.tar.bz2
@@ -14,10 +10,13 @@ install:
     - mv sambamba_v0.5.8 ./bin/sambamba
     - chmod +x ./bin/sambamba
     - export PATH="${PATH}:${PWD}/bin"
-    - pip install -q -r requirements-dev.txt .
+    - pip install -r requirements.txt -r requirements-dev.txt .
+    - pip check
+before_script:
+    - git reset --soft ${TRAVIS_COMMIT_RANGE%...*} && git lint
 
 script:
-    - coverage run --source chanjo setup.py test
+    - coverage run --source "$(basename "$PWD")" setup.py test
 
 after_success: coveralls
 
