--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
     - mv sambamba_v0.5.8 ./bin/sambamba
     - chmod +x ./bin/sambamba
     - export PATH="${PATH}:${PWD}/bin"
+    - pip install six==1.12.0
     - pip install -r requirements.txt -r requirements-dev.txt .
 
 before_script:
