Adds pipfile and lockfile

--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,14 @@ mock = "*"
 ipdb = "*"
 pytest-cov = "*"
 coveralls = "*"
+pylint = "*"
+mkdocs = "*"
+markdown-include = "*"
 
 [packages]
 coloredlogs = "*"
 alchy = "*"
 click = "*"
-"path.py" = "*"
+path = "*"
 toolz = "*"
 "ruamel.yaml" = "*"
