--- a/.gitignore
+++ b/.gitignore
@@ -50,9 +50,10 @@ TODO.md
 .idea/
 .vscode/
 
-# Sphinx docs
+# Docs
 docs/_build
 docs/_book
+site/
 
 ### SublimeText ###
 # workspace files are user-specific
