install conda software into the base environment

--- a/.github/workflows/pytest_n_coveralls.yml
+++ b/.github/workflows/pytest_n_coveralls.yml
@@ -11,9 +11,9 @@ jobs:
         python-version: 3.7 #installed on this Linux distro
     - name: Install required linux libs via conda
       run: |
-        conda update -n base -c defaults conda
-        conda install -c bioconda sambamba
-        conda install -c conda-forge ruamel.yaml
+        $CONDA/bin/conda update -n base -c defaults conda
+        $CONDA/bin/conda install -c bioconda sambamba
+        $CONDA/bin/conda install -c conda-forge ruamel.yaml
     - name: Install repo and its dependencies
       run: |
         pip install -r requirements.txt
