--- a/.github/workflows/pytest_n_coveralls.yml
+++ b/.github/workflows/pytest_n_coveralls.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@master
       with:
-        python-version: 3.7 #installed on this Linux distro
+        python-version: 3.7
     - name: Install Sambamba
       run: |
         brew install brewsci/bio/sambamba
