try to fix the coveralls not running error

--- a/.github/workflows/pytest_n_coveralls.yml
+++ b/.github/workflows/pytest_n_coveralls.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Run pytest and coveralls
       run: |
         pytest --cov=chanjo tests/
-        coveralls
+        coveralls --service=github
       env:
         GITHUB_TOKEN: ${{ github.token }}
