--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 site_name: Chanjo Docs
-site_url: http://www.clinicalgenomics.se/chanjo/
+site_url: https://clinical-genomics.github.io/chanjo/
 repo_url: https://github.com/Clinical-Genomics/chanjo
 dev_addr: "0.0.0.0:4000"
 site_author: Clinical Genomics bioinfo team
