change the type of action to be triggered on new release

--- a/.github/workflows/pypi_build_n_publish.yml
+++ b/.github/workflows/pypi_build_n_publish.yml
@@ -1,6 +1,9 @@
 name: Publish to PyPI && publish mkdocs action
 
-on: [pull_request]
+on:
+ release:
+  types:
+   - created
 
 jobs:
  build-n-publish:
