--- a/.github/workflows/pytest_n_coveralls.yml
+++ b/.github/workflows/pytest_n_coveralls.yml
@@ -9,9 +9,18 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: 3.7
-    - name: Install Sambamba
+    
+    - name: Get Conda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: 3.7
+    
+    # Need to add shell to make conda environments work
+    - name: Install sambamba
+      shell: bash -l {0}
       run: |
-        brew install brewsci/bio/sambamba
+        conda install -c bioconda sambamba=0.6.6=2
     - name: Install repo and its dependencies
       run: |
         pip install -r requirements.txt
