--- a/.github/workflows/pypi_build_n_publish.yml
+++ b/.github/workflows/pypi_build_n_publish.yml
@@ -8,15 +8,15 @@ on:
 jobs:
  build-n-publish:
   name: Build and publish Python distribution to PyPI
-  runs-on: ubuntu-18.04
+  runs-on: ubuntu-latest
   steps:
    - name: Check out git repository
-     uses: actions/checkout@v2
+     uses: actions/checkout@v4
 
-   - name: Set up Python 3.7
-     uses: actions/setup-python@v2
+   - name: Set up Python 3.8
+     uses: actions/setup-python@v5
      with:
-      python-version: 3.7
+      python-version: 3.8
 
    - name: Install build tools
      run: >-
