Fix #261 - pkg_resources migration (#262)
* Fix #261 - pkg_resources migration

* first try the backport versions

* make that a pre 3.10 fallback

* workaround for pathlib instead of os.path

* one more abspath

* mkdirs as well

* one more..

* resolve a couple of more path obj to path strs

* fix bootstrap testing

* fix cli store test

* fix test logging to file

* fix a few more tests to use pathlib

* shutil instead of find_executable

* ah, str, not path

* Use more modern Dockerfile

* Update chanjo/testutils.py

Co-authored-by: Chiara Rasi <rasi.chiara@gmail.com>

* main link

---------

Co-authored-by: Chiara Rasi <rasi.chiara@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 coloredlogs
 click
 cryptography
-path.py
 toolz
 pyyaml
 importlib_metadata
+importlib_resources
 pymysql
 sqlalchemy>=2.0
 sqlservice>=3.0
