--- a/.github/workflows/deploy_mkdocs.yml
+++ b/.github/workflows/deploy_mkdocs.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup environment for docs deployment
       uses: actions/setup-python@v5
       with:
-        python-version: 3.x
+        python-version: 3.11
     - name: Install mkdocs
       run: pip install mkdocs mkdocs-material markdown-include
     - name: Deploy documentation
