Fix action version, bump to 4.7.2 manually

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
-# So long as you are building a pure Python package that supports
-# Python 2 and 3.
-[wheel]
-universal=1
+[bumpversion]
+current_version = 4.7.2
 
-# make pypi render markdown files
+[wheel]
+universal = 1
+
 [metadata]
 description-file = README.md
 
 [tool:pytest]
-looponfailroots =
-    tests/
-    chanjo/
+looponfailroots = 
+	tests/
+	chanjo/
